--- a/package.json
+++ b/package.json
@@ -1,26 +1,36 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "personal_site",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Home page of Kevin Huang",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Kevin Huang <kevin_huang@college.harvard.edu>",
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^3.0.0",
+    "dotenv": "latest",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-manifest": "^2.4.5",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sass": "^2.3.2",
     "gatsby-plugin-sharp": "^2.6.4",
     "gatsby-source-filesystem": "^2.3.4",
+    "gatsby-source-graphql": "^2.5.2",
     "gatsby-transformer-sharp": "^2.5.2",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "react-responsive": "^8.1.0",
+    "simple-icons": "^2.13.0",
+    "typewriter-effect": "^2.13.1"
   },
   "devDependencies": {
+    "gatsby-source-github": "0.0.2",
     "gh-pages": "^2.2.0",
-    "prettier": "2.0.5"
+    "prettier": "2.0.5",
+    "react-hamburger-menu": "^1.2.1"
   },
   "keywords": [
     "gatsby"
@@ -28,7 +38,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "env-cmd  .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
